<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="10dp"
    android:background="@drawable/gettoknowbackground">

    <RelativeLayout
        android:id="@+id/relative_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/userIMG"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:background="@drawable/ic_launcher_background"
                android:contentDescription="@string/todo"
                android:padding="5dp"
                android:scaleType="fitCenter" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="casual"
                        android:padding="3dp"
                        android:text="@string/name"
                        android:textColor="#00BCD4"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="casual"
                        android:padding="3dp"
                        android:textColor="#00BCD4"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoSizeMaxTextSize="40sp"
                        android:autoSizeMinTextSize="10sp"
                        android:autoSizeStepGranularity="2sp"
                        android:autoSizeTextType="uniform"
                        android:fontFamily="casual"
                        android:gravity="center"
                        android:padding="3dp"
                        android:text="@string/title"
                        android:textColor="#0414F7"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tvTotalLikes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="casual"
                        android:gravity="center"
                        android:padding="3dp"
                        android:textColor="#0414F7"
                        android:textSize="24sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>